src/App.css
/*  FRONT DESK */

* {
  margin: 0;
}
.App {
  display:block;
}

.logo {
  display:inline;
}
.App-logo {
  height: 40vmin;
  pointer-events: none;
}


.App-header {
  background-color: #494949;
  font-size: calc(10px + 2vmin);
  color: white;
}

/* NAV BAR */
nav {
  border-bottom:1px solid orange;
  z-index: 1;
}

nav .App ul {
  margin: 0;
  height: 75px;

}
nav .App li {
  margin: 5px;
  display: inline-block;
  list-style-type: none;
}
/*  END FRONT DESK */
/* HOME PAGE */
 
.affiliateContainer {
  background-color: #494949; 
  text-align:center;
}

.affiliate {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

